<resources>
    <string name="app_name">RickAndMortyApi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_title">Name:</string>
    <string name="status_title">Status:</string>
    <string name="species_title">Species:</string>
    <string name="type_title">Type:</string>
    <string name="gender_title">Gender:</string>
    <string name="location_title">Location:</string>
    <string name="origin_title">Origin:</string>
    <string name="episodes_title">Episodes:</string>


    <string name="status_filter_title">Status</string>
    <string name="gender_filter_title">Gender</string>

    <string-array name="status_values_array">
        <item>not chosen</item>
        <item>alive</item>
        <item>dead</item>
        <item>unknown</item>
    </string-array>

    <string-array name="gender_values_array">
        <item>not chosen</item>
        <item>female</item>
        <item>male</item>
        <item>genderless</item>
        <item>unknown</item>
    </string-array>


    <string name="gender_female">female</string>
    <string name="gender_male">male</string>
    <string name="gender_genderless">genderless</string>
    <string name="gender_unknown">unknown</string>


    <string name="no_internet_message">No Internet Connection</string>
    <string name="internet_available_message">Internet connection is restored</string>
    <string name="reload_page_snackbar_button">Reload</string>


    <string name="empty_list_message">List is empty</string>
    <string name="error_message">Error while loading</string>


</resources>