<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/recycler_item_shape"
    android:elevation="2dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/recyclerItemImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5">
    </androidx.constraintlayout.widget.Guideline>
        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            app:layout_constraintTop_toTopOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:layout_marginStart="10dp"
            >
        </TextView>

        <TextView
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_title"
            app:layout_constraintTop_toTopOf="@id/status"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:layout_marginStart="10dp"

            >
        </TextView>

        <TextView
            android:id="@+id/species_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species_title"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/species"
            android:layout_marginStart="10dp"
            >
        </TextView>

        <TextView
            android:id="@+id/type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/type_title"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/type"
            android:layout_marginStart="10dp"


            >
        </TextView>

        <TextView
            android:id="@+id/gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/gender_title"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/gender"
            android:layout_marginStart="10dp"


            >
        </TextView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7">
        </androidx.constraintlayout.widget.Guideline>


        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/status"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            tools:text="sdsdeorijreiojeroijr433ioj4io43joi34jio43j"
            >
        </TextView>

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/species"
            android:layout_marginEnd="10dp"
            tools:text="erlkerjekrl"
            >
        </TextView>

        <TextView
            android:id="@+id/species"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status"
            app:layout_constraintBottom_toTopOf="@id/type"
            android:layout_marginEnd="10dp"
            >
        </TextView>

        <TextView
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/species"
            app:layout_constraintBottom_toTopOf="@id/gender"
            android:layout_marginEnd="10dp"
            >
        </TextView>

        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            >
        </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>